--- a/sample/maserie/templates/home.html
+++ b/sample/maserie/templates/home.html
@@ -89,7 +89,7 @@
 								</div>
 							  	</form>
 							</div>
-							<a href="">Register</a>
+							<a href="{{ url_for('register')}}">Register</a>
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
