--- a/sample/maserie/templates/register.html
+++ b/sample/maserie/templates/register.html
@@ -35,6 +35,8 @@
       <h1>Register</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
+      <label for="email"><b>Nom d'utilisateur</b></label>
+      <input type="text" placeholder="Username" name="username" required>
 
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
