--- a/sample/maserie/templates/about.html
+++ b/sample/maserie/templates/about.html
@@ -59,7 +59,6 @@
 									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
 								</ul>
 							</li>
-							<li><a href="{{ url_for('about')}}">About</a></li>
 							<li><a href="{{ url_for('contact')}}">Contact</a></li>
 						</ul>
 					</nav>
@@ -71,156 +70,52 @@
 
 
 	<!-- Page top section -->
-	<section class="page-top-section" style="background:url('/static/img/page-top-bg/3.jpg');background-size:cover">
+	<section class="page-top-section" style="background:url('/static/img/page-top-bg/4.jpg');background-size:cover">
 		<div class="page-info">
-			<h2>Blog</h2>
+			<h2>Contact</h2>
 			<div class="site-breadcrumb">
 				<a href="">Home</a>  /
-				<span>Blog</span>
+				<span>Contact</span>
 			</div>
 		</div>
 	</section>
 	<!-- Page top end-->
 
 
-	<!-- Blog page -->
-	<section class="blog-page">
+	<!-- Contact page -->
+	<section class="contact-page">
 		<div class="container">
+			<div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe></div>
 			<div class="row">
-				<div class="col-xl-9 col-lg-8 col-md-7">
-					<ul class="blog-filter">
-						<li><a href="#">Racing</a></li>
-						<li><a href="#">Shooters</a></li>
-						<li><a href="#">Strategy</a></li>
-						<li><a href="#">Online</a></li>
-					</ul>
-					<div class="big-blog-item">
-						<img src="{{url_for('static', filename='img/blog-big/1.jpg')}}" alt="#" class="blog-thumbnail">
-						<div class="blog-content text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best VR games on the market</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-					<div class="big-blog-item">
-						<img src="{{url_for('static', filename='img/blog-big/2.jpg')}}" alt="#" class="blog-thumbnail">
-						<div class="blog-content text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best online game is out now!</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-					<div class="big-blog-item">
-						<img src="{{url_for('static', filename='img/blog-big/3.jpg')}}" alt="#" class="blog-thumbnail">
-						<div class="blog-content text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best online game is out now!</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-					<div class="site-pagination">
-						<a href="#" class="active">01.</a>
-						<a href="#">02.</a>
-						<a href="#">03.</a>
-					</div>
+				<div class="col-lg-7 order-2 order-lg-1">
+					<form class="contact-form">
+						<input type="text" placeholder="Your name">
+						<input type="text" placeholder="Your e-mail">
+						<input type="text" placeholder="Subject">
+						<textarea placeholder="Message"></textarea>
+						<button class="site-btn">Send message<img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
+					</form>
 				</div>
-				<div class="col-xl-3 col-lg-4 col-md-5 sidebar">
-					<div id="stickySidebar">
-						<div class="widget-item">
-							<form class="search-widget">
-								<input type="text">
-								<button>search</button>
-							</form>
-						</div>
-						<div class="widget-item">
-							<h4 class="widget-title">Trending</h4>
-							<div class="trending-widget">
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{url_for('static', filename='img/blog-widget/1.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{url_for('static', filename='img/blog-widget/2.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{url_for('static', filename='img/blog-widget/3.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{url_for('static', filename='img/blog-widget/4.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="widget-item">
-							<div class="categories-widget">
-								<h4 class="widget-title">categories</h4>
-								<ul>
-									<li><a href="">Games</a></li>
-									<li><a href="">Gaming Tips & Tricks</a></li>
-									<li><a href="">Online Games</a></li>
-									<li><a href="">Team Games</a></li>
-									<li><a href="">Community</a></li>
-									<li><a href="">Uncategorized</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="widget-item">
-							<h4 class="widget-title">Latest Comments</h4>
-							<div class="latest-comments">
-								<div class="lc-item">
-									<img src="{{url_for('static', filename='img/blog-widget/1.jpg')}}" class="lc-avatar" alt="#">
-									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
-								</div>
-								<div class="lc-item">
-									<img src="{{url_for('static', filename='img/blog-widget/2.jpg')}}" class="lc-avatar" alt="#">
-									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
-								</div>
-								<div class="lc-item">
-									<img src="{{url_for('static', filename='img/blog-widget/3.jpg')}}" class="lc-avatar" alt="#">
-									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
-								</div>
-								<div class="lc-item">
-									<img src="{{url_for('static', filename='img/blog-widget/4.jpg')}}" class="lc-avatar" alt="#">
-									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
-								</div>
-							</div>
-						</div>
-						<div class="widget-item">
-							<a href="#" class="add">
-								<img src="{{url_for('static', filename='img/add.jpg')}}" alt="">
-							</a>
-						</div>
+				<div class="col-lg-5 order-1 order-lg-2 contact-text text-white">
+					<h3>Howdy! Say hello</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
+					<div class="cont-info">
+						<div class="ci-icon"><img src="{{url_for('static', filename='img/icons/location.png')}}" alt=""></div>
+						<div class="ci-text">Main Str, no 23, New York</div>
+					</div>
+					<div class="cont-info">
+						<div class="ci-icon"><img src="{{url_for('static', filename='img/icons/phone.png')}}" alt=""></div>
+						<div class="ci-text">+546 990221 123</div>
+					</div>
+					<div class="cont-info">
+						<div class="ci-icon"><img src="{{url_for('static', filename='img/icons/mail.png')}}" alt=""></div>
+						<div class="ci-text">hosting@contact.com</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- Blog page end-->
+	<!-- Contact page end-->
 
 
 	<!-- Newsletter section -->
@@ -246,7 +141,7 @@
 				<img src="{{url_for('static', filename='img/footer-right-pic.png')}}" alt="">
 			</div>
 			<a href="#" class="footer-logo">
-				<img src="{{url_for('static', filename='/img/logo.png')}}" alt="">
+				<img src="{{url_for('static', filename='img/logo.png')}}" alt="">
 			</a>
 			<ul class="main-menu footer-menu">
 				<li><a href="">Home</a></li>
