--- a/sample/maserie/templates/home.html
+++ b/sample/maserie/templates/home.html
@@ -43,16 +43,7 @@
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
 				<div class="container">
-					<h2>Game on!</h2>
-					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
-					<a href="#" class="site-btn">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-				</div>
-			</div>
-			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-2.jpg');background-size:cover">
-				<div class="container">
-					<h2>Game on!</h2>
-					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
-					<a href="#" class="site-btn">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+					<h2>Bienvenue</h2>
 				</div>
 			</div>
 		</div>
@@ -97,16 +88,13 @@
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Home</a></li>
-							<li><a href="{{ url_for('series')}}">Séries</a>
+							<li><a href="{{ url_for('series_alphabet')}}">Séries</a>
 								<ul class="sub-menu">
-									<li><a href="{{ url_for('gamesingle')}}">Par genre</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Les plus regardées</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Nouveautés</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
+									<li><a href="{{ url_for('series_alphabet')}}">Alphabétique</a></li>
+									<li><a href="{{ url_for('series_categories')}}">Catégories</a></li>
 								</ul>
 							</li>
 							<li><a href="{{ url_for('about')}}">About</a></li>
-							<li><a href="{{ url_for('contact')}}">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -119,193 +107,20 @@
 	<section class="intro-section">
 		<div class="container">
 			<div class="row">
+				{% for post in posts %}
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<h3>Nouveautés !</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+						<h3>{{ post.title }}</h3>
+						<p>{{ post.description }}</p>
+						<a href="{{ url_for('serie')}}" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+						<img src={{ post.images.show }} alt="#"/>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<h3>Top 5 séries 2019 !</h3>
-						<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum  labore suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<h3>Les séries les plus regardées !</h3>
-						<p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida ncididunt ut labore ....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-					</div>
-				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</section>
 	<!-- Intro section end -->
-
-
-	<!-- Blog section -->
-	<section class="blog-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-9 col-lg-8 col-md-7">
-					<div class="section-title text-white">
-						<h2>Latest News</h2>
-					</div>
-					<ul class="blog-filter">
-						<li><a href="#">Racing</a></li>
-						<li><a href="#">Shooters</a></li>
-						<li><a href="#">Strategy</a></li>
-						<li><a href="#">Online</a></li>
-					</ul>
-					<!-- Blog item -->
-					<div class="blog-item">
-						<div class="blog-thumb">
-							<img src="{{ url_for('static', filename='img/blog/1.jpg')}}" alt="">
-						</div>
-						<div class="blog-text text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best online game is out now!</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-					<!-- Blog item -->
-					<div class="blog-item">
-						<div class="blog-thumb">
-							<img src="{{ url_for('static', filename='img/blog/2.jpg')}}" alt="">
-						</div>
-						<div class="blog-text text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best online game is out now!</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-					<!-- Blog item -->
-					<div class="blog-item">
-						<div class="blog-thumb">
-							<img src="{{ url_for('static', filename='img/blog/3.jpg')}}" alt="">
-						</div>
-						<div class="blog-text text-box text-white">
-							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-							<h3>The best online game is out now!</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-4 col-md-5 sidebar">
-					<div id="stickySidebar">
-						<div class="widget-item">
-							<h4 class="widget-title">Trending</h4>
-							<div class="trending-widget">
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{ url_for('static', filename='img/blog-widget/1.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{ url_for('static', filename='img/blog-widget/2.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{ url_for('static', filename='img/blog-widget/3.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-								<div class="tw-item">
-									<div class="tw-thumb">
-										<img src="{{ url_for('static', filename='img/blog-widget/4.jpg')}}" alt="#">
-									</div>
-									<div class="tw-text">
-										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
-										<h5>The best online game is out now!</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="widget-item">
-							<div class="categories-widget">
-								<h4 class="widget-title">categories</h4>
-								<ul>
-									<li><a href="">Games</a></li>
-									<li><a href="">Gaming Tips & Tricks</a></li>
-									<li><a href="">Online Games</a></li>
-									<li><a href="">Team Games</a></li>
-									<li><a href="">Community</a></li>
-									<li><a href="">Uncategorized</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="widget-item">
-						<a href="#" class="add">
-							<img src="{{ url_for('static', filename='img/add.jpg')}}" alt="">
-						</a>
-					</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Blog section end -->
-
-
-	<!-- Promo section -->
-	<section class="intro-video-section d-flex align-items-end" style="background:url('/static/img/promo-bg.jpg'); background-size: cover;")>
-		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="{{ url_for('static', filename='img/icons/solid-right-arrow.png')}}" alt="#"></a>
-		<div class="container">
-			<div class="video-text">
-				<h2>Promo video of the game</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-			</div>
-		</div>
-	</section>
-	<!-- Promo section end -->
-
-
-	<!-- Featured section -->
-	<section class="featured-section">
-		<div class="featured-bg" style="background: url('/static/img/featured-bg.jpg');background-size:cover"></div>
-		<div class="featured-box">
-			<div class="text-box">
-				<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-				<h3>The game you’ve been waiting  for is out now</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus...</p>
-				<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-			</div>
-		</div>
-	</section>
-	<!-- Featured section end-->
-
-
-
-	<!-- Newsletter section -->
-	<section class="newsletter-section">
-		<div class="container">
-			<h2>Subscribe to our newsletter</h2>
-			<form class="newsletter-form">
-				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
-			</form>
-		</div>
-	</section>
-	<!-- Newsletter section end -->
 
 
 	<!-- Footer section -->
@@ -314,21 +129,7 @@
 			<a href="#" class="footer-logo">
 				<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
 			</a>
-			<ul class="main-menu footer-menu">
-				<li><a href="">Home</a></li>
-				<li><a href="">Games</a></li>
-				<li><a href="">Reviews</a></li>
-				<li><a href="">News</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-			<div class="footer-social d-flex justify-content-center">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
-			</div>
-			<div class="copyright"><a href="">Colorlib</a> 2018 @ All rights reserved</div>
+			<div class="copyright"><a href="">Colorlib</a> 2019 @ All rights reserved</div>
 		</div>
 	</footer>
 	<!-- Footer section end -->
