--- a/sample/maserie/templates/serie.html
+++ b/sample/maserie/templates/serie.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Bienvenue sur ma série préférée</title>
 	<meta charset="UTF-8">
+	<meta name="description" content="EndGam Gaming Magazine Template">
+	<meta name="keywords" content="endGam,gGaming, magazine, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<!-- Favicon -->
 	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
 
@@ -29,6 +33,7 @@
 
 </head>
 <body>
+
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -44,21 +49,42 @@
 						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
 					</a>
 					<nav class="top-nav-area w-100">
+						<!-- connection section -->
 						<div class="user-panel">
-							<a href="">Login</a> / <a href="">Register</a>
+							<button onclick="document.getElementById('id01').style.display='block'" style="width:auto">Login</button> /
+							<div id="id01" class="modal">
+							  	<form class="modal-content animate" action="/action_page.php" method="post" style="width:50%;height:50%;background-color:#000000;float:right">
+								<div class="container" style="background-color:#000000">
+								  	<label for="uname"><b>Username</b></label>
+								 	<input type="text" placeholder="Enter Username" name="uname" required>
+
+									<label for="psw"><b>Password</b></label>
+								  	<input type="password" placeholder="Enter Password" name="psw" required>
+
+								  	<button type="submit">Login</button>
+								  	<label>
+									<input type="checkbox" checked="checked" name="remember"> Remember me
+								  	</label>
+								</div>
+
+								<div class="container" style="background-color:#000000">
+								  	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+								 	<span class="psw">Forgot <a href="#">password?</a></span>
+								</div>
+							  	</form>
+							</div>
+							<a href="{{ url_for('register')}}">Register</a>
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Home</a></li>
-							<li><a href="{{ url_for('series')}}">Séries</a>
+							<li><a href="{{ url_for('series_alphabet')}}">Séries</a>
 								<ul class="sub-menu">
-									<li><a href="{{ url_for('gamesingle')}}">Par genre</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Les plus regardées</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Nouveautés</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
+									<li><a href="{{ url_for('series_alphabet')}}">Alphabétique</a></li>
+									<li><a href="{{ url_for('series_categories')}}">Catégories</a></li>
 								</ul>
 							</li>
-							<li><a href="{{ url_for('contact')}}">Contact</a></li>
+							<li><a href="{{ url_for('about')}}">About</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -66,18 +92,6 @@
 		</header>
 	</section>
 	<!-- Header section end -->
-
-	<!-- Page top section -->
-	<section class="page-top-section" style="background:url('/static/img/page-top-bg/1.jpg');background-size:cover">
-		<div class="page-info">
-			<h2>Games</h2>
-			<div class="site-breadcrumb">
-				<a href="">Home</a>  /
-				<span>Games</span>
-			</div>
-		</div>
-	</section>
-	<!-- Page top end-->
 
 
 	<!-- Games section -->
@@ -95,14 +109,6 @@
 					<h4>Conclusion</h4>
 					<p>Nulla ut maximus mauris. Sed malesuada at sapien sed euismod. Vestibulum pharetra in sem id laoreet. Cras metus ex, placerat nec justo quis, luctus posuere ex. Vivamus volutpat nibh ac sollicitudin imperdiet. Donec scelerisque lorem sodales odio ultricies, nec rhoncus ex lobortis. Vivamus tincidunt sit amet sem id varius. Donec ele-mentum aliquet tortor. Curabitur justo mi, efficitur sed eros aliquet, dictum molestie eros. Nullam scelerisque convallis gravida. Morbi id lorem accumsan, scelerisque enim laoreet, sollicitudin neque. Vivamus volutpat nibh ac sollicitudin imperdiet. Donec scelerisque lorem sodales odio ultricies, nec rhoncus ex lobortis. Vivamus tincidunt sit amet sem id varius. Donec ele-mentum aliquet tortor. Curabitur justo mi, efficitur sed eros aliqueDonec vitae tellus sodales, congue augue at, biben-dum justo. Pellentesque non dolor et magna volutpat pharetra eget vel ligula. Maecenas facilisis vestibulum mattis. Sed sagittis gravida urna. Cras nec mi risus.
 					</p>
-					<div class="geme-social-share pt-5 d-flex">
-						<p>Share:</p>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-dribbble"></i></a>
-						<a href="#"><i class="fa fa-behance"></i></a>
-					</div>
 				</div>
 				<div class="col-xl-3 col-lg-4 col-md-5 sidebar game-page-sideber">
 					<div id="stickySidebar">
@@ -137,57 +143,14 @@
 	</section>
 	<!-- Games end-->
 
-	<section class="game-author-section">
-		<div class="container">
-			<div class="game-author-pic" style="background:url('/static/img/author.jpg');background-size:cover"></div>
-			<div class="game-author-info">
-				<h4>Written by: Michael Williams</h4>
-				<p>Vivamus volutpat nibh ac sollicitudin imperdiet. Donec scelerisque lorem sodales odio ultricies, nec rhoncus ex lobortis. Vivamus tincid-unt sit amet sem id varius. Donec elementum aliquet tortor. Curabitur justo mi, efficitur sed eros alique.</p>
-			</div>
-		</div>
-	</section>
-
-
-	<!-- Newsletter section -->
-	<section class="newsletter-section">
-		<div class="container">
-			<h2>Subscribe to our newsletter</h2>
-			<form class="newsletter-form">
-				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
-			</form>
-		</div>
-	</section>
-	<!-- Newsletter section end -->
-
 
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="container">
-			<div class="footer-left-pic">
-				<img src="{{url_for('static', filename='img/footer-left-pic.png')}}" alt="">
-			</div>
-			<div class="footer-right-pic">
-				<img src="{{url_for('static', filename='img/footer-right-pic.png')}}" alt="">
-			</div>
-			<a href="#" class="footer-logo">
-				<img src="{{url_for('static', filename='img/logo.png')}}" alt="">
+			<a href="{{ url_for('home')}}" class="footer-logo">
+				<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
 			</a>
-			<ul class="main-menu footer-menu">
-				<li><a href="">Home</a></li>
-				<li><a href="">Games</a></li>
-				<li><a href="">Reviews</a></li>
-				<li><a href="">News</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-			<div class="footer-social d-flex justify-content-center">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
-			</div>
-			<div class="copyright"><a href="">Colorlib</a> 2018 @ All rights reserved</div>
+			<div class="copyright"><a href="">Colorlib</a> 2019 @ All rights reserved</div>
 		</div>
 	</footer>
 	<!-- Footer section end -->
