--- a/sample/maserie/templates/series_alphabet.html
+++ b/sample/maserie/templates/series_alphabet.html
@@ -29,6 +29,7 @@
 
 </head>
 <body>
+
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -44,21 +45,42 @@
 						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
 					</a>
 					<nav class="top-nav-area w-100">
+						<!-- connection section -->
 						<div class="user-panel">
-							<a href="">Login</a> / <a href="">Register</a>
+							<button onclick="document.getElementById('id01').style.display='block'" style="width:auto">Login</button> /
+							<div id="id01" class="modal">
+							  	<form class="modal-content animate" action="/action_page.php" method="post" style="width:50%;height:50%;background-color:#000000;float:right">
+								<div class="container" style="background-color:#000000">
+								  	<label for="uname"><b>Username</b></label>
+								 	<input type="text" placeholder="Enter Username" name="uname" required>
+
+									<label for="psw"><b>Password</b></label>
+								  	<input type="password" placeholder="Enter Password" name="psw" required>
+
+								  	<button type="submit">Login</button>
+								  	<label>
+									<input type="checkbox" checked="checked" name="remember"> Remember me
+								  	</label>
+								</div>
+
+								<div class="container" style="background-color:#000000">
+								  	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+								 	<span class="psw">Forgot <a href="#">password?</a></span>
+								</div>
+							  	</form>
+							</div>
+							<a href="{{ url_for('register')}}">Register</a>
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Home</a></li>
-							<li><a href="{{ url_for('series')}}">Séries</a>
+							<li><a href="{{ url_for('series_alphabet')}}">Séries</a>
 								<ul class="sub-menu">
-									<li><a href="{{ url_for('gamesingle')}}">Par genre</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Les plus regardées</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Nouveautés</a></li>
-									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
+									<li><a href="{{ url_for('series_alphabet')}}">Alphabétique</a></li>
+									<li><a href="{{ url_for('series_categories')}}">Catégories</a></li>
 								</ul>
 							</li>
-							<li><a href="{{ url_for('contact')}}">Contact</a></li>
+							<li><a href="{{ url_for('about')}}">About</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -66,21 +88,6 @@
 		</header>
 	</section>
 	<!-- Header section end -->
-
-
-	<!-- Page top section -->
-	<section class="page-top-section" style="background:url('/static/img/page-top-bg/1.jpg');background-size:cover">
-		<div class="page-info">
-			<h2>Séries</h2>
-			<div class="site-breadcrumb">
-				<a href="">Home</a>
-				<span>Séries</span>
-			</div>
-		</div>
-	</section>
-	<!-- Page top end-->
-
-
 
 
 	<!-- Games section -->
@@ -122,63 +129,63 @@
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/1.jpg')}}" alt="#">
 								<h5>Zombie Appocalipse 2</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/2.jpg')}}" alt="#">
 								<h5>Dooms Day</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/3.jpg')}}" alt="#">
 								<h5>The Huricane</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/4.jpg')}}" alt="#">
 								<h5>Star Wars</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/5.jpg')}}" alt="#">
 								<h5>Candy land</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/6.jpg')}}" alt="#">
 								<h5>E.T.</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/7.jpg')}}" alt="#">
 								<h5>Zombie Appocalipse 2</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/8.jpg')}}" alt="#">
 								<h5>Dooms Day</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
 								<img src="{{url_for('static', filename='img/games/9.jpg')}}" alt="#">
 								<h5>The Huricane</h5>
-								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+								<a href="{{url_for('serie')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 					</div>
@@ -237,61 +244,13 @@
 	<!-- Games end-->
 
 
-	<!-- Featured section -->
-	<section class="featured-section">
-		<div class="featured-bg" style="background:url('/static/img/featured-bg.jpg');background-size:cover"></div>
-		<div class="featured-box">
-			<div class="text-box">
-				<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-				<h3>The game you’ve been waiting  for is out now</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus...</p>
-				<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-			</div>
-		</div>
-	</section>
-	<!-- Featured section end-->
-
-
-	<!-- Newsletter section -->
-	<section class="newsletter-section">
-		<div class="container">
-			<h2>Subscribe to our newsletter</h2>
-			<form class="newsletter-form">
-				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
-			</form>
-		</div>
-	</section>
-	<!-- Newsletter section end -->
-
-
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="container">
-			<div class="footer-left-pic">
-				<img src="{{url_for('static', filename='img/footer-left-pic.png')}}" alt="">
-			</div>
-			<div class="footer-right-pic">
-				<img src="{{url_for('static', filename='img/footer-right-pic.png')}}" alt="">
-			</div>
-			<a href="#" class="footer-logo">
-				<img src="{{url_for('static', filename='/img/logo.png')}}" alt="">
+			<a href="{{ url_for('home')}}" class="footer-logo">
+				<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
 			</a>
-			<ul class="main-menu footer-menu">
-				<li><a href="">Home</a></li>
-				<li><a href="">Games</a></li>
-				<li><a href="">Reviews</a></li>
-				<li><a href="">News</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-			<div class="footer-social d-flex justify-content-center">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
-			</div>
-			<div class="copyright"><a href="">Colorlib</a> 2018 @ All rights reserved</div>
+			<div class="copyright"><a href="">Colorlib</a> 2019 @ All rights reserved</div>
 		</div>
 	</footer>
 	<!-- Footer section end -->
