My list, series

--- a/sample/maserie/templates/about.html
+++ b/sample/maserie/templates/about.html
@@ -79,13 +79,9 @@
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Home</a></li>
-							<li><a href="{{ url_for('series_alphabet')}}">Séries</a>
-								<ul class="sub-menu">
-									<li><a href="{{ url_for('series_alphabet')}}">Alphabétique</a></li>
-									<li><a href="{{ url_for('series_categories')}}">Catégories</a></li>
-								</ul>
-							</li>
+							<li><a href="{{ url_for('series_alphabet')}}">Séries</a></li>
 							<li><a href="{{ url_for('about')}}">About</a></li>
+							<li><a href="{{ url_for('my_list')}}">My List</a></li>
 						</ul>
 					</nav>
 				</div>
