--- a/sample/maserie/templates/series_alphabet.html
+++ b/sample/maserie/templates/series_alphabet.html
@@ -73,10 +73,10 @@
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
-							<li><a href="{{ url_for('home')}}">Home</a></li>
+							<li><a href="{{ url_for('home')}}">Accueil</a></li>
 							<li><a href="{{ url_for('series_alphabet')}}">Séries</a></li>
-							<li><a href="{{ url_for('about')}}">About</a></li>
-							<li><a href="{{ url_for('my_list')}}">My List</a></li>
+							<li><a href="{{ url_for('about')}}">À Propos</a></li>
+							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -88,6 +88,9 @@
 
 	<!-- Games section -->
 	<section class="games-section">
+		<div class="container text-white">
+			<h1>Séries</h1>
+		</div>
 		<div class="container">
 			<ul class="game-filter">
 				<li><a href="">#</a></li>
