--- a/sample/maserie/templates/about.html
+++ b/sample/maserie/templates/about.html
@@ -78,10 +78,10 @@
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
-							<li><a href="{{ url_for('home')}}">Home</a></li>
+							<li><a href="{{ url_for('home')}}">Accueil</a></li>
 							<li><a href="{{ url_for('series_alphabet')}}">Séries</a></li>
-							<li><a href="{{ url_for('about')}}">About</a></li>
-							<li><a href="{{ url_for('my_list')}}">My List</a></li>
+							<li><a href="{{ url_for('about')}}">À Propos</a></li>
+							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
 						</ul>
 					</nav>
 				</div>
