--- a/sample/maserie/templates/my_list.html
+++ b/sample/maserie/templates/my_list.html
@@ -3,10 +3,6 @@
 <head>
 	<title>Bienvenue sur ma série préférée</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!-- Favicon -->
 	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
 
@@ -38,18 +34,6 @@
 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
-
-		<!-- Hero section -->
-	<section class="hero-section overflow-hidden">
-		<div class="hero-slider owl-carousel">
-			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
-				<div class="container">
-					<h2>Bienvenue</h2>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero section end-->
 
 	<!-- Header section -->
 	<section class="header">
@@ -89,10 +73,10 @@
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
-							<li><a href="{{ url_for('home')}}">Home</a></li>
+							<li><a href="{{ url_for('home')}}">Accueil</a></li>
 							<li><a href="{{ url_for('series_alphabet')}}">Séries</a></li>
-							<li><a href="{{ url_for('about')}}">About</a></li>
-                            <li><a href="{{ url_for('my_list')}}">My List</a></li>
+							<li><a href="{{ url_for('about')}}">À Propos</a></li>
+							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -101,27 +85,84 @@
 	</section>
 	<!-- Header section end -->
 
-	<!-- Intro section -->
-	<section class="intro-section">
+
+	<!-- Games section -->
+	<section class="games-section">
 		<div class="container text-white">
-			<h1>Séries du moment</h1>
+			<h1>Séries préférées</h1>
 		</div>
 		<div class="container">
+			<ul class="game-filter">
+				<li><a href="">#</a></li>
+				<li><a href="">A</a></li>
+				<li><a href="">B</a></li>
+				<li><a href="">C</a></li>
+				<li><a href="">D</a></li>
+				<li><a href="">E</a></li>
+				<li><a href="">F</a></li>
+				<li><a href="">G</a></li>
+				<li><a href="">H</a></li>
+				<li><a href="">I</a></li>
+				<li><a href="">J</a></li>
+				<li><a href="">K</a></li>
+				<li><a href="">L</a></li>
+				<li><a href="">M</a></li>
+				<li><a href="">N</a></li>
+				<li><a href="">O</a></li>
+				<li><a href="">P</a></li>
+				<li><a href="">Q</a></li>
+				<li><a href="">R</a></li>
+				<li><a href="">S</a></li>
+				<li><a href="">T</a></li>
+				<li><a href="">U</a></li>
+				<li><a href="">V</a></li>
+				<li><a href="">W</a></li>
+				<li><a href="">X</a></li>
+				<li><a href="">Y</a></li>
+				<li><a href="">Z</a></li>
+			</ul>
 			<div class="row">
-				{% for post in posts %}
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<h3>{{ post.title }}</h3>
-						<p>{{ post.description }}</p>
-						<a href="{{ url_for('serie')}}" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						<a href="{{ url_for('serie')}}" class="read-more"><img src={{ post.images.show }} alt="#"/></a>
+				<div class="col-xl-7 col-lg-8 col-md-7">
+					<div class="row">
+						{% for post in posts %}
+						<div class="col-lg-4 col-md-6">
+							<div class="game-item">
+								<a href="{{ url_for('serie')}}" class="read-more">
+									<img src={{ post.images.show }} alt="#"/>
+								</a>
+								<h5>{{ post.title }}</h5>
+								<a href="{{ url_for('serie')}}" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+							</div>
+						</div>
+						{% endfor %}
+					</div>
+					<div class="site-pagination">
+						<a href="#" class="active">01.</a>
+						<a href="#">02.</a>
+						<a href="#">03.</a>
 					</div>
 				</div>
-				{% endfor %}
+				<div class="col-xl-3 col-lg-4 col-md-5 sidebar game-page-sideber">
+					<div id="stickySidebar">
+						<div class="widget-item">
+							<div class="categories-widget">
+								<h4 class="widget-title">Genre</h4>
+								<ul>
+									<li><a href="">Drame</a></li>
+									<li><a href="">Comédie</a></li>
+									<li><a href="">Mystère</a></li>
+									<li><a href="">Enfants</a></li>
+									<li><a href="">Télé-réalité</a></li>
+									<li><a href="">Mini-série</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
-	<!-- Intro section end -->
+	<!-- Games end-->
 
 
 	<!-- Footer section -->
@@ -144,17 +185,6 @@
 	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
 	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
 	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
-	<script>
-	// Get the modal
-	var modal = document.getElementById('id01');
-
-	// When the user clicks anywhere outside of the modal, close it
-	window.onclick = function(event) {
-		if (event.target == modal) {
-			modal.style.display = "none";
-		}
-	}
-	</script>
 
 	</body>
 </html>
