--- a/sample/maserie/templates/serie.html
+++ b/sample/maserie/templates/serie.html
@@ -94,23 +94,24 @@
 	<section class="games-single-page">
 		<div class="container">
 			<div class="game-single-preview">
-				<img src="{{url_for('static', filename='img/games/big.jpg')}}" alt="">
+				<img src={{ display.show.images.show }} alt="#"/>
 			</div>
 			<div class="row">
+				<button>Add</button>
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
-					<div class="gs-meta">11.11.18  /  in <a href="">Games</a></div>
-					<h2 class="gs-title">Final Appocalipse 2.1</h2>
-					<h4>Gameplay</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus.</p>
-					<h4>Conclusion</h4>
-					<p>Nulla ut maximus mauris. Sed malesuada at sapien sed euismod. Vestibulum pharetra in sem id laoreet. Cras metus ex, placerat nec justo quis, luctus posuere ex. Vivamus volutpat nibh ac sollicitudin imperdiet. Donec scelerisque lorem sodales odio ultricies, nec rhoncus ex lobortis. Vivamus tincidunt sit amet sem id varius. Donec ele-mentum aliquet tortor. Curabitur justo mi, efficitur sed eros aliquet, dictum molestie eros. Nullam scelerisque convallis gravida. Morbi id lorem accumsan, scelerisque enim laoreet, sollicitudin neque. Vivamus volutpat nibh ac sollicitudin imperdiet. Donec scelerisque lorem sodales odio ultricies, nec rhoncus ex lobortis. Vivamus tincidunt sit amet sem id varius. Donec ele-mentum aliquet tortor. Curabitur justo mi, efficitur sed eros aliqueDonec vitae tellus sodales, congue augue at, biben-dum justo. Pellentesque non dolor et magna volutpat pharetra eget vel ligula. Maecenas facilisis vestibulum mattis. Sed sagittis gravida urna. Cras nec mi risus.
-					</p>
-					<h4>Open Fun</h4>
-					{% for episode in episodes.episodes %}
-						<p>{{ episode.title }}</p>
-						<p>{{ episode.season }}</p>
-						<p>{{ episode.episode }}</p>
-						<p>{{ episode.description }}</p>
+					<div class="gs-meta">11.11.18</div>
+
+					<h2 class="gs-title">{{ display.show.title }}</h2>
+					<p>{{ display.show.description }}</p>
+					<p>Nombre de saisons : {{ display.show.seasons }}</p>
+					<p>Nombre d'épisodes : {{ display.show.episodes }}</p>
+					{% for saison in saisons.seasons %}
+						<h4>Saison {{ saison.number }}</h4>
+						<p>Contient {{ saison.episodes }} episodes</p>
+						{% for episode in episodes.episodes %}
+							<p>{{ episode.title }}</p>
+							<p>{{ episode.description }}</p>
+						{% endfor %}
 					{% endfor %}
 				</div>
 				<div class="col-xl-3 col-lg-4 col-md-5 sidebar game-page-sideber">
