--- a/sample/maserie/templates/serie.html
+++ b/sample/maserie/templates/serie.html
@@ -78,7 +78,7 @@
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Accueil</a></li>
-							<li><a href="{{ url_for('series_alphabet')}}">Séries</a></li>
+							<li><a href="{{ url_for('series_alphabet', starting=' ', page=1)}}">Séries</a></li>
 							<li><a href="{{ url_for('about')}}">À Propos</a></li>
 							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
 						</ul>
