--- a/sample/maserie/templates/series_alphabet.html
+++ b/sample/maserie/templates/series_alphabet.html
@@ -90,6 +90,13 @@
 	<section class="games-section">
 		<div class="container text-white">
 			<h1>Séries</h1>
+			<form class="search-widget">
+			  <div>
+				<input type="search" id="maRecherche" name="q"
+				 placeholder="Rechercher sur le site…">
+				<button>Rechercher</button>
+			  </div>
+			</form>
 		</div>
 		<div class="container">
 			<ul class="game-filter">
