--- a/sample/maserie/static/css/style.css
+++ b/sample/maserie/static/css/style.css
@@ -778,7 +778,7 @@ ol {
 }
 
 .search-widget input {
-	width: 100%;
+	width: 50%;
 	height: 40px;
 	border: none;
 	border-bottom: 2px solid #72628b;
@@ -788,9 +788,7 @@ ol {
 }
 
 .search-widget button {
-	position: absolute;
-	right: 0;
-	top: 0;
+	text-align: right;
 	color: #b01ba5;
 	font-weight: 700;
 	font-size: 14px;
