--- a/sample/maserie/templates/series.html
+++ b/sample/maserie/templates/series.html
@@ -3,11 +3,16 @@
 {% block content %}
 	<!-- Games section -->
 	<section class="games-section">
+
 		<div class="container text-white">
 			<h1>Séries</h1>
 		</div>
 
 		<div class="container">
+			<form  method="POST" action="bonjour" class="coord_gps"  name="coord" >
+            	<label>Recherche: <input id = "search" type="text" name="search" value = ""></label>
+        	</form>
+
 			<ul class="game-filter">
 				<li><a href="{{ url_for('series', starting=' ', page=1)}}">#</a></li>
 				{% for lettre in ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P',
