--- a/sample/maserie/templates/home.html
+++ b/sample/maserie/templates/home.html
@@ -1,48 +1,11 @@
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-	<title>Bienvenue sur ma série préférée</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
 
-	<!-- Favicon -->
-	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
-
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css') }}"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
+{% block content %}
 		<!-- Hero section -->
 	<section class="hero-section overflow-hidden">
 		<div class="hero-slider owl-carousel">
-			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
+			<div class="hero-item d-flex align-items-center justify-content-center text-center"
+				 style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
 				<div class="container">
 					<h2>Bienvenue</h2>
 				</div>
@@ -51,70 +14,24 @@
 	</section>
 	<!-- Hero section end-->
 
-	<!-- Header section -->
-	<section class="header">
-		<header class="header-section">
-			<div class="header-warp">
-				<div class="header-bar-warp d-flex">
-					<!-- site logo -->
-					<a href="{{ url_for('home') }}" class="site-logo">
-						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
-					</a>
-					<nav class="top-nav-area w-100">
-						<!-- connection section -->
-						<div class="user-panel">
-							<button onclick="document.getElementById('id01').style.display='block'" style="width:auto">Login</button> /
-							<div id="id01" class="modal">
-							  	<form class="modal-content animate" action="/action_page.php" method="post" style="width:50%;height:50%;background-color:#000000;float:right">
-								<div class="container" style="background-color:#000000">
-								  	<label for="uname"><b>Username</b></label>
-								 	<input type="text" placeholder="Enter Username" name="uname" required>
-
-									<label for="psw"><b>Password</b></label>
-								  	<input type="password" placeholder="Enter Password" name="psw" required>
-
-								  	<button type="submit">Login</button>
-								  	<label>
-									<input type="checkbox" checked="checked" name="remember"> Remember me
-								  	</label>
-								</div>
-
-								<div class="container" style="background-color:#000000">
-								  	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-								 	<span class="psw">Forgot <a href="#">password?</a></span>
-								</div>
-							  	</form>
-							</div>
-							<a href="{{ url_for('register')}}">Register</a>
-						</div>
-						<!-- Menu -->
-						<ul class="main-menu primary-menu">
-							<li><a href="{{ url_for('home')}}">Accueil</a></li>
-							<li><a href="{{ url_for('series_alphabet', starting=' ', page=1)}}">Séries</a></li>
-							<li><a href="{{ url_for('about')}}">À Propos</a></li>
-							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-	</section>
-	<!-- Header section end -->
-
 	<!-- Intro section -->
 	<section class="intro-section">
 		<div class="container text-white">
 			<h1>Séries du moment</h1>
 		</div>
+
 		<div class="container">
 			<div class="row">
+
 				{% for post in posts %}
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
 						<h3>{{ post.title }}</h3>
 						<p>{{ post.description }}</p>
-						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more"><img src={{ post.images.show }} alt="#"/></a>
+						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">Read More
+							<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">
+							<img src={{ post.images.show }} alt="#"/></a>
 					</div>
 				</div>
 				{% endfor %}
@@ -123,38 +40,4 @@
 	</section>
 	<!-- Intro section end -->
 
-
-	<!-- Footer section -->
-	<footer class="footer-section">
-		<div class="container">
-			<a href="{{ url_for('home')}}" class="footer-logo">
-				<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
-			</a>
-			<div class="copyright"><a href="">Colorlib</a> 2019 @ All rights reserved</div>
-		</div>
-	</footer>
-	<!-- Footer section end -->
-
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.slicknav.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/owl.carousel.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
-	<script>
-	// Get the modal
-	var modal = document.getElementById('id01');
-
-	// When the user clicks anywhere outside of the modal, close it
-	window.onclick = function(event) {
-		if (event.target == modal) {
-			modal.style.display = "none";
-		}
-	}
-	</script>
-
-	</body>
-</html>
+{% endblock %}
