--- a/sample/maserie/templates/serie.html
+++ b/sample/maserie/templates/serie.html
@@ -1,180 +1,70 @@
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-	<title>Bienvenue sur ma série préférée</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
 
-	<!-- Favicon -->
-	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
-
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}"/>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css') }}"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	<!-- Header section -->
-	<section class="header">
-		<header class="header-section">
-			<div class="header-warp">
-				<div class="header-bar-warp d-flex">
-					<!-- site logo -->
-					<a href="{{ url_for('home') }}" class="site-logo">
-						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
-					</a>
-					<nav class="top-nav-area w-100">
-						<!-- connection section -->
-						<div class="user-panel">
-							<button onclick="document.getElementById('id01').style.display='block'" style="width:auto">Login</button> /
-							<div id="id01" class="modal">
-							  	<form class="modal-content animate" action="/action_page.php" method="post" style="width:50%;height:50%;background-color:#000000;float:right">
-								<div class="container" style="background-color:#000000">
-								  	<label for="uname"><b>Username</b></label>
-								 	<input type="text" placeholder="Enter Username" name="uname" required>
-
-									<label for="psw"><b>Password</b></label>
-								  	<input type="password" placeholder="Enter Password" name="psw" required>
-
-								  	<button type="submit">Login</button>
-								  	<label>
-									<input type="checkbox" checked="checked" name="remember"> Remember me
-								  	</label>
-								</div>
-
-								<div class="container" style="background-color:#000000">
-								  	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-								 	<span class="psw">Forgot <a href="#">password?</a></span>
-								</div>
-							  	</form>
-							</div>
-							<a href="{{ url_for('register')}}">Register</a>
-						</div>
-						<!-- Menu -->
-						<ul class="main-menu primary-menu">
-							<li><a href="{{ url_for('home')}}">Accueil</a></li>
-							<li><a href="{{ url_for('series_alphabet', starting=' ', page=1)}}">Séries</a></li>
-							<li><a href="{{ url_for('about')}}">À Propos</a></li>
-							<li><a href="{{ url_for('my_list')}}">Ma Liste</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-	</section>
-	<!-- Header section end -->
-
-
+{% block content %}
 	<!-- Games section -->
 	<section class="games-single-page">
 		<div class="container">
 			<div class="game-single-preview">
 				<img src={{ display.images.show }} alt="#"/>
 			</div>
+
 			<div class="row">
 				<button>Add</button>
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">11.11.18</div>
 
-					<h2 class="gs-title">{{ display.title }}</h2>
-					<p>{{ display.description }}</p>
-					<h5 style="color: white">Nombre de saisons : {{ display.seasons }}</h5>
-					<h5 style="color: white">Nombre d'épisodes : {{ display.episodes }}</h5>
-									{% for saison in saisons %}
+						<h2 class="gs-title">{{ display.title }}</h2>
+						<p>{{ display.description }}</p>
+						<h5 style="color: white">Nombre de saisons : {{ display.seasons }}</h5>
+						<h5 style="color: white">Nombre d'épisodes : {{ display.episodes }}</h5>
+						{% for saison in saisons %}
 				 <!-- Tab links -->
-<div class="tab">
-  <button class="tablinks" onclick="openSeason(event, 'saison {{saison.number}}')">Saison {{ saison.number }}</button>
-</div>
+						<div class="tab">
+						  <button class="tablinks" onclick="openSeason(event, 'saison {{saison.number}}')">Saison {{ saison.number }}</button>
+						</div>
 
 
-<!-- Tab content -->
+						<!-- Tab content -->
 
-<div id="saison {{ saison.number }}" class="tabcontent">
-<h4>Saison {{ saison.number }}</h4>
-						<h6>Contient {{ saison.episodes }} episodes</h6>
+						<div id="saison {{ saison.number }}" class="tabcontent">
+						<h4>Saison {{ saison.number }}</h4>
+						<h6 style="color: white">Contient {{ saison.episodes }} episodes</h6>
 						{% for episode in episodes %}
 							{% if episode.season == saison.number %}
-							<h5>Episode {{ episode.episode }} - {{ episode.title }}</h5>
-							<p>{{ episode.description }}</p>
+								<h5 style="color: white">Episode {{ episode.episode }} - {{ episode.title }}</h5>
+								<p>{{ episode.description }}</p>
 							{% endif %}
 						{% endfor %}
-</div>
-								{% endfor %}
+						</div>
+					{% endfor %}
 				</div>
-<script>
-function openSeason(evt, seasonNumber) {
-  // Declare all variables
-  var i, tabcontent, tablinks;
 
-  // Get all elements with class="tabcontent" and hide them
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
+			<script>
+				function openSeason(evt, seasonNumber) {
+				  // Declare all variables
+				  var i, tabcontent, tablinks;
 
-  // Get all elements with class="tablinks" and remove the class "active"
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
+				  // Get all elements with class="tabcontent" and hide them
+				  tabcontent = document.getElementsByClassName("tabcontent");
+				  for (i = 0; i < tabcontent.length; i++) {
+					tabcontent[i].style.display = "none";
+				  }
 
-  // Show the current tab, and add an "active" class to the button that opened the tab
-  document.getElementById(seasonNumber).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-</script>
+				  // Get all elements with class="tablinks" and remove the class "active"
+				  tablinks = document.getElementsByClassName("tablinks");
+				  for (i = 0; i < tablinks.length; i++) {
+					tablinks[i].className = tablinks[i].className.replace(" active", "");
+				  }
+
+				  // Show the current tab, and add an "active" class to the button that opened the tab
+				  document.getElementById(seasonNumber).style.display = "block";
+				  evt.currentTarget.className += " active";
+				}
+			</script>
 
 			</div>
 		</div>
 	</section>
 	<!-- Games end-->
 
-
-	<!-- Footer section -->
-	<footer class="footer-section">
-		<div class="container">
-			<a href="{{ url_for('home')}}" class="footer-logo">
-				<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
-			</a>
-			<div class="copyright"><a href="">Colorlib</a> 2019 @ All rights reserved</div>
-		</div>
-	</footer>
-	<!-- Footer section end -->
-
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.slicknav.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/owl.carousel.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
-	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
-
-	</body>
-</html>
+{% endblock %}
