--- a/sample/maserie/templates/home.html
+++ b/sample/maserie/templates/home.html
@@ -7,7 +7,7 @@
 			<div class="hero-item d-flex align-items-center justify-content-center text-center"
 				 style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
 				<div class="container">
-					<h2>Bienvenue</h2>
+					<h2>Bienvenue {{ bonjour }}</h2>
 				</div>
 			</div>
 		</div>
