--- a/Serious/app/templates/serie.html
+++ b/Serious/app/templates/serie.html
@@ -9,9 +9,9 @@
 			</div>
 
 			<div class="row">
-				<form action="button">
-    				<button action="{{ url_for('button', serie_id=serie_id) }}">Klik</button>
-				<form>
+				<form action="" method="POST">
+    				<button name="button" value="{{serie_id}}">Klik</button>
+				</form>
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">11.11.18</div>
 
